-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9
-
RHEL 6.6
-
ac5a6f9ed06b98aa63981dd5d30e0febf36010d8
It's alarming that also other autotests in RHEL 6.6 have started to fail in Qt 5.9 branch. Could this be related to QTBUG-57115?
No symbol table info available.
Detaching from program: /home/qt/work/qt/qtwebengine/tests/auto/quick/qquickwebengineview/tst_qquickwebengineview, process 3353
========= End of stack trace ==============
QFATAL : tst_QQuickWebEngineView::removeFromCanvas() Received signal 11
Function time: 691ms Total time: 1816ms
FAIL! : tst_QQuickWebEngineView::removeFromCanvas() Received a fatal error.
Loc: [Unknown file(0)]
Totals: 14 passed, 1 failed, 0 skipped, 0 blacklisted, 6130ms
********* Finished testing of tst_QQuickWebEngineView *********
make: *** [check] Aborted (core dumped)